fixed dropdown collapse?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5841,6 +5841,10 @@ footer.bg-dark a {
   margin-bottom: 0 !important;
 }
 
+.mb5 {
+  margin-bottom: 5px;
+}
+
 .mb8 {
   margin-bottom: 8px;
 }
